View Issue Details

IDProjectCategoryView StatusLast Update
0022092Open CASCADEOCCT:Data Exchangepublic2012-03-29 17:26
Reportervro Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
OSAll 
Product Version6.4.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022092: Crash of application on attempt to load a VRML file with all degenerated triangles
DescriptionIn case of a VRML file contains all triangles degenerated, the application
crashes... Certainly, the VRML file is invalid. But at least a simple protection
should be added to Open CASCADE.
TagsNo tags attached.
Test case numberchl 934 R1

Attached Files

  • vrml.zip (1,603 bytes)
  • vro-OCC22092-v1.zip (15,801 bytes)
  • R1 (889 bytes)

Activities

2010-10-22 11:54

 

vrml.zip (1,603 bytes)

2010-10-22 14:48

 

vro-OCC22092-v1.zip (15,801 bytes)

bugmaster

2011-09-13 14:52

administrator   ~0018128

Dear Anton,
Please prepare branch from vro-OCC22092-v1.zip archive and make revising

apl

2011-12-21 18:14

developer   ~0018934

The SVN branch http://svn/svn/occt/branches/OCC22092 has been merged with fix "vro-OCC22092-v1"

apl

2011-12-21 18:15

developer   ~0018935

Dear Bugmaster,

The branch has been reviewed and ready for tests.

mkv

2012-01-13 17:08

tester   ~0019116

Dear BugMaster,
Workbench KAS:dev:mkv-22092-occt was created from SVN branch http://svn/svn/occt/branches/OCC22092
(and mkv-22092-products from trunk) and compiled on Linux platform.

There are not regressions in mkv-22092-products regarding to KAS:dev:products-22122011-opt

See results in /QADisk/occttests/results/KAS/dev/mkv-22092-products_22122011/lin
See reference results in /QADisk/occttests/results/KAS/dev/products-20111216-opt_17122011/lin
See test cases in /QADisk/occttests/tests/ED
N.B. In order to launch testing case you can make use the following instructions
http://doc/doku.php?id=occt:certification

mkv

2012-01-13 17:08

tester   ~0019117

Dear vro,
It necessary to create test case (new draw command) for testing this fix.

vro

2012-02-02 11:59

developer   ~0019346

The draw-command exists: it is loadvrml.

bugmaster

2012-02-03 10:55

administrator   ~0019368

Vlad,

It is necessary to create prototupe of testing case with usage of loadvrml command.

vro

2012-02-03 11:28

developer   ~0019370

loadvrml S sk97.wrl

szy

2012-02-03 17:42

manager   ~0019391

The testing command is added.

bugmaster

2012-02-07 12:51

administrator   ~0019431

Mikhail,

Please create testing case and change status to tested

mkv

2012-02-07 16:42

tester  

R1 (889 bytes)

mkv

2012-02-07 16:43

tester   ~0019443

Dear BugMaster,
Test case for this fix is chl/934/R1. It is OK.

bugmaster

2012-02-10 13:59

administrator   ~0019503

Integrated into trunk of occt repository

Date: 2012-02-10 13:43:18 +0400 (Fri, 10 Feb 2012)
New Revision: 10405

Modified:
   trunk/src/VrmlData/VrmlData_Group.cxx
   trunk/src/VrmlData/VrmlData_IndexedFaceSet.cxx
   trunk/src/VrmlData/VrmlData_Scene.cxx

Related Changesets

occt: master bd754989

2012-02-10 09:43:18

vro


Committer: bugmaster Details Diff
0022092: Crash of application on attempt to load a VRML file with all degenerated triangles Affected Issues
0022092
mod - src/VrmlData/VrmlData_Group.cxx Diff File
mod - src/VrmlData/VrmlData_IndexedFaceSet.cxx Diff File
mod - src/VrmlData/VrmlData_Scene.cxx Diff File

Issue History

Date Modified Username Field Change
2011-08-02 11:12 bugmaster Category OCCT:DTE => OCCT:Data Exchange
2011-09-13 14:52 bugmaster Note Added: 0018128
2011-09-13 14:52 bugmaster Assigned To bugmaster => apl
2011-09-13 14:52 bugmaster Status new => assigned
2011-12-21 18:14 apl Note Added: 0018934
2011-12-21 18:14 apl Status assigned => resolved
2011-12-21 18:15 apl Note Added: 0018935
2011-12-21 18:15 apl Status resolved => reviewed
2011-12-23 10:44 abv Product Version => 6.4.2
2011-12-23 10:44 abv Fixed in Version EMPTY =>
2011-12-23 10:44 abv Target Version => 6.5.3
2011-12-23 10:44 abv Description Updated
2012-01-13 17:08 mkv Note Added: 0019116
2012-01-13 17:08 mkv Note Added: 0019117
2012-01-13 17:09 mkv Assigned To apl => vro
2012-01-13 17:09 mkv Status reviewed => assigned
2012-02-02 11:59 vro Note Added: 0019346
2012-02-02 11:59 vro Assigned To vro => bugmaster
2012-02-02 11:59 vro Status assigned => resolved
2012-02-03 10:54 bugmaster Assigned To bugmaster => vro
2012-02-03 10:55 bugmaster Note Added: 0019368
2012-02-03 11:28 vro Note Added: 0019370
2012-02-03 17:42 szy Note Added: 0019391
2012-02-03 17:42 szy Assigned To vro => bugmaster
2012-02-03 17:42 szy Status resolved => assigned
2012-02-07 12:51 bugmaster Note Added: 0019431
2012-02-07 12:51 bugmaster Status assigned => feedback
2012-02-07 16:42 mkv File Added: R1
2012-02-07 16:43 mkv Note Added: 0019443
2012-02-07 16:44 mkv Test case number => chl 934 R1
2012-02-07 16:44 mkv Status feedback => reviewed
2012-02-07 16:44 mkv Status reviewed => tested
2012-02-10 13:59 bugmaster Note Added: 0019503
2012-02-10 13:59 bugmaster Status tested => verified
2012-02-10 13:59 bugmaster Resolution open => fixed
2012-02-10 13:59 bugmaster Assigned To bugmaster => vro
2012-03-29 17:26 bugmaster Changeset attached => occt master bd754989