0022092: Crash of application on attempt to load a VRML file with all degenerated triangles